# interest

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  README.pt_BR.md
.github/workflows/: ci.yml
src/: commands.rs  dispatcher.rs  error.rs  lib.rs  main.rs  term_contracts.rs  tesouro.rs
src/cli/: formatters.rs  help.rs  mod.rs  runner.rs
src/corporate_actions/: mod.rs
src/db/: mod.rs  models.rs  schema.sql
src/dispatcher/: actions.rs  assets.rs  cashflow.rs  imports.rs  imports_helpers.rs  inconsistencies.rs  inspect.rs  irpf.rs  performance.rs  portfolio.rs  prices.rs  terms.rs  tickers.rs  transactions.rs
src/importers/: b3_cotahist.rs  cei_csv.rs  cei_excel.rs  file_detector.rs  irpf_pdf.rs  mod.rs  movimentacao_excel.rs  movimentacao_import.rs  ofertas_publicas_excel.rs  validation.rs
src/pricing/: brapi.rs  mod.rs  resolver.rs  tesouro.rs  yahoo.rs
src/reports/: cashflow.rs  mod.rs  performance.rs  portfolio.rs
src/scraping/: investing.rs  maisretorno.rs  mod.rs
src/tax/: cost_basis.rs  darf.rs  irpf.rs  loss_carryforward.rs  mod.rs  swing_trade.rs
src/tickers/: ambima.rs  mod.rs
src/ui/: crossterm_engine.rs  event_loop.rs  mod.rs  overlays.rs  progress.rs  readline.rs  tui.rs
src/utils/: mod.rs
tests/: README.md  cli_helpers.rs  e2e_cli.rs  generate_test_files.rs  income_tests.rs  integration_tests.rs  sqlite_helpers.rs  tax_integration_tests.rs  tax_snapshot_tests.rs
tests/data/: 01_basic_purchase_sale.xlsx  02_term_contract_lifecycle.xlsx  03_term_contract_sold.xlsx  04_stock_split.xlsx  05_reverse_split.xlsx  06_multiple_splits.xlsx  07_capital_return.xlsx  08_complex_scenario.xlsx  09_fi_infra.xlsx  10_duplicate_trades.xlsx  11_bonus_auto_apply.xlsx  12_desdobro_inference.xlsx  13_ofertas_publicas.xlsx  14_atualizacao_inference.xlsx  15_mixed_splits_and_bonus.xlsx  16_rename_with_split.xlsx  generate_test_files.py
tests/fixtures/: ambima_LAMEA6.html  ambima_LUGG11.html  b3_tickers_sample.csv  maisretorno_lista-debentures.html  maisretorno_lista-fii.html  tesouro_precotaxatesourodireto.csv  yahoo_chart_PETR4.json  yahoo_chart_PETR4_hist.json
tests/fixtures/b3_cache/: tickers.csv  tickers.meta.json
