[package]
name = "interest"
version = "0.1.0"
edition = "2021"
authors = ["Interest Contributors"]
description = "Brazilian B3 stock exchange investment tracker with tax calculations"
license = "MIT"

[dependencies]
# Database - Limbo (Rust SQLite rewrite)
limbo = "0.0.22"

# CLI framework
clap = { version = "4.5", features = ["derive", "cargo"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# HTTP client for price APIs
reqwest = { version = "0.12", features = ["json"] }

# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Excel/CSV parsing
calamine = "0.26"
csv = "1.3"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Decimal arithmetic for financial calculations (CRITICAL - no f64!)
rust_decimal = { version = "1.36", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Table formatting for CLI output
tabled = "0.16"
colored = "2.1"

# Configuration
toml = "0.8"
