[package]
name = "interest"
version = "0.1.0"
edition = "2021"
authors = ["Interest Contributors"]
description = "Brazilian B3 stock exchange investment tracker with tax calculations"
license = "MIT"

[lib]
name = "interest"
path = "src/lib.rs"

[[bin]]
name = "interest"
path = "src/main.rs"

[dependencies]
# Database - SQLite
# Note: Using rusqlite for now (stable), designed to swap to Limbo later when it's production-ready
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }

# CLI framework
clap = { version = "4.5", features = ["derive", "cargo"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# HTTP client for price APIs
reqwest = { version = "0.12", features = ["json"] }

# Headless browser for web scraping (investing.com, etc.)
headless_chrome = "1.0"
scraper = "0.22"        # HTML parsing

# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Excel/CSV/PDF parsing
calamine = "0.26"
csv = "1.3"
pdf-extract = "0.7" # IRPF PDF parsing
regex = "1.10"      # Pattern matching for IRPF data extraction

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Decimal arithmetic for financial calculations (CRITICAL - no f64!)
rust_decimal = { version = "1.36", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Hashing
blake3 = "1.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Table formatting for CLI output
tabled = { version = "0.16", features = ["ansi"] }
colored = "2.1"

# Terminal UI (TUI) framework
crossterm = "0.27"
rustyline = "14.0"
indicatif = "0.17"
unicode-width = "0.1"

# Utilities
itertools = "0.12"
once_cell = "1.19"

# Configuration
toml = "0.8"

[dev-dependencies]
tempfile = "3.13"
rust_xlsxwriter = "0.82"
rust_decimal_macros = "1.36"
assert_cmd = "2.0"
predicates = "3.0"
