[package]
name = "interest"
version = "0.1.0"
edition = "2021"
authors = ["Interest Contributors"]
description = "Brazilian B3 stock exchange investment tracker with tax calculations"
license = "MIT"

[[bin]]
name = "interest"
path = "src/main.rs"

[features]
default = ["tui"]
tui = []

[dependencies]
# Database - SQLite
# Note: Using rusqlite for now (stable), designed to swap to Limbo later when it's production-ready
rusqlite = { version = "0.38", features = ["bundled", "chrono"] }

# CLI framework
clap = { version = "4.5", features = ["derive", "cargo"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# HTTP client for price APIs
reqwest = { version = "0.13", features = ["json", "blocking"] }
httpdate = "1.0"  # For If-Modified-Since header formatting

# Headless browser for web scraping (investing.com, etc.)
headless_chrome = "1.0"
scraper = "0.25"        # HTML parsing

# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Excel/CSV/PDF parsing
calamine = "0.32"
csv = "1.3"
encoding_rs = "0.8"
pdf-extract = "0.10" # IRPF PDF parsing
regex = "1.10"      # Pattern matching for IRPF data extraction
unicode-normalization = "0.1"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Decimal arithmetic for financial calculations (CRITICAL - no f64!)
rust_decimal = { version = "1.36", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Hashing
blake3 = "1.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Table formatting for CLI output
tabled = { version = "0.20", features = ["ansi"] }
colored = "3.0"

# Terminal UI (TUI) framework
crossterm = "0.29"
rustyline = "17.0"
indicatif = "0.18"
unicode-width = "0.2"

# Utilities
itertools = "0.14"
once_cell = "1.19"
dir_spec = "0.5"   # Cross-platform cache/config directories; prefered over dirs for respecting XDG on mac/win
zip = "7.0"        # ZIP archive extraction for COTAHIST files
rust_xlsxwriter = "0.92"

# Configuration
toml = "0.9"

[dev-dependencies]
tempfile = "3.13"
rust_decimal_macros = "1.36"
assert_cmd = "2.1"
predicates = "3.0"
